--- a/second.html
+++ b/second.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html>
-  <head>
+
+<html lang="en">
+	<head>
 		<title>Harjoittelen lisää</title>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8">
+		<link rel="stylesheet" type="text/css" href="styles.css">
+	</head>
+
     
     
   </head>
