--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<html>
-  <head>
+<!DOCTYPE html>
+
+
+<html  lang="en">
+	<head>
 		<title>Harjoittelen lisää</title>
 		<meta charset="utf-8" />
-    
-    
-  </head>
+    	<link rel="stylesheet" type="text/css" href="styles.css">
+
+	</head>
   <body>
     <a href="second.html/"> use this </a>
     <h1> Css:än uudet taidot</h1>
