--- a/second.html
+++ b/second.html
@@ -11,7 +11,7 @@
     
   </head>
   <body>
-    <a href="https://www.google.com/"> use this </a>
+    <a href="https://jerojal.github.io/04B-VIsual-Elements-and-Graphics-Assignment"> use this </a>
     <h1> Css:än uudet taidot</h1>
     
     <p> css:ssä on paljon erilaisia toimintoja.</p>
