--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <a href="https://jerojal.github.io/04B-VIsual-Elements-and-Graphics-Assignment">use this</a>
     <h1> Css:än uudet taidot</h1>
     
-    <p> css on paljon erilaisia toimintoja.</p>
+    <p> css on paljon erilaisia toimintoja kirahvi indexi.</p>
 	  
     
 <img class="fit-picture"
