--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 
-
 <html  lang="en">
 	<head>
 		<title>Harjoittelen lisää</title>
 		<meta charset="utf-8" />
     	<link rel="stylesheet" type="text/css" href="styles.css">
-
 	</head>
-  <body>
-    <a href="https://jerojal.github.io/04B-VIsual-Elements-and-Graphics-Assignment">use this</a>
-    <h1> Css:än uudet taidot</h1>
+	
+	<body>
+		<a href="https://jerojal.github.io/04B-VIsual-Elements-and-Graphics-Assignment">use this</a>
+		<h1> Css:än uudet taidot</h1>
     
-    <p> css on paljon erilaisia toimintoja kirahvi indexi.</p>
+		<p> css on paljon erilaisia toimintoja kirahvi indexi.</p>
 	  
     
-<img class="fit-picture"
-     src="/media/cc0-images/grapefruit-slice-332-332.jpg"
-     alt="Grapefruit slice atop a pile of other slices">
+		<img class="fit-picture"
+			src="/media/cc0-images/grapefruit-slice-332-332.jpg"
+			alt="Grapefruit slice atop a pile of other slices">
+	<body/>
