--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 
-<html  lang="en">
+<html lang="en">
 	<head>
 		<title>Harjoittelen lisää</title>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
     	<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
 	
