--- a/second.html
+++ b/second.html
@@ -8,8 +8,8 @@
 	</head>
 
 	<body>
-		<a href="#web-history"> use this </a>
-		<h1 id="web-history">cssän Css:än uudet taidot</h1>
+		<a href="#index.html"> use this </a>
+		<h1 id="index.html">cssän Css:än uudet taidot</h1>
     
 		<p> css:ssä on paljon erilaisia toimintoja.</p>
 		
