--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	</head>
 	
 	<body>
-		<a href="https://jerojal.github.io/04B-VIsual-Elements-and-Graphics-Assignment">use this</a>
-		<h1> Css:än uudet taidot</h1>
+		<a href="#second.html">use this</a>
+		<h1 id="second.html"> Css:än uudet taidot</h1>
     
 		<p> css on paljon erilaisia toimintoja kirahvi indexi.</p>
 	  
