--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	
 	<body>
 		<a href="#second.html">use this</a>
-		<h1 id="second.html"> Css:än uudet taidot</h1>
+		<h1 id="second.html"> Css:än uudet taidots</h1>
     
 		<p> css on paljon erilaisia toimintoja kirahvi indexi.</p>
 	  
