--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	</head>
 	
 	<body>
-		<a href="#second.html">use this</a>
-		<h1 id="second.html"> Css:än uudet taidots</h1>
+		<a href="https://jerojal.github.io/second.html/">use this</a>
+		<h1> Css:än uudet taidots</h1>
     
 		<p> css on paljon erilaisia toimintoja kirahvi indexi.</p>
 	  
