--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	
 	<body>
-		<a href="https://jerojal.github.io/second.html/">use this</a>
+		<a href="https://jerojal.github.io/second.html/second.html">use this</a>
 		<h1> Css:än uudet taidots</h1>
     
 		<p> css on paljon erilaisia toimintoja kirahvi indexi.</p>
