--- a/second.html
+++ b/second.html
@@ -8,7 +8,7 @@
 	</head>
 
 	<body>
-		<a href="https://jerojal.github.io/second.html/index"> use this </a>
+		<a href="https://jerojal.github.io/second.html"> use this </a>
 		<h1>cssän Css:än uudet taidot</h1>
     
 		<p> css:ssä on paljon erilaisia toimintoja.</p>
