--- a/index.html
+++ b/index.html
@@ -14,7 +14,5 @@
 		<p> css on paljon erilaisia toimintoja kirahvi indexi.</p>
 	  
     
-		<img class="fit-picture"
-			src="/media/cc0-images/grapefruit-slice-332-332.jpg"
-			alt="Grapefruit slice atop a pile of other slices">
+		<img src "sa_pixar_virtualbg_coco_16x9_9ccd7110.jpeg" width = "250" height = "300">
 	<body/>
