--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@
 		<a href="https://jerojal.github.io/second.html/second.html">use this</a>
 		<h1> Css:än uudet taidots</h1>
 		<p> css on paljon erilaisia toimintoja kirahvi indexi.</p>
-		<img src="Coco.jpg" alt="Tausta" width ="250" height ="300">
+		<img src="Coco" alt="Tausta" width ="250" height ="300">
 	<body/>
