--- a/second.html
+++ b/second.html
@@ -3,12 +3,12 @@
 <html lang="en">
 	<head>
 		<title>Harjoittelen lisää</title>
-		<meta charset="UTF-8">
+		<meta charset="UTF-8"/>
 		<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
 
 	<body>
-		<a href="https://jerojal.github.io/second.html"> use this </a>
+		<a href="https://jerojal.github.io/second.html">use this </a>
 		<h1>cssän Css:än uudet taidot</h1>
 		<p> css:ssä on paljon erilaisia toimintoja.</p>
 		<img src="Coco" alt="Tausta" width ="250" height ="300">
