--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <html lang="en">
 	<head>
 		<title>Harjoittelen lisää</title>
-		<meta charset="UTF-8" />
+		<meta charset="UTF-8"/>
     	<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
 	
 	<body>
 		<a href="https://jerojal.github.io/second.html/second.html">use this</a>
-		<h1> Css:än uudet taidots</h1>
+		<h1>Css:än uudet taidots</h1>
 		<p> css on paljon erilaisia toimintoja kirahvi indexi.</p>
-		<img src="Coco" alt="Tausta" width ="250" height ="300">
+		<img src="Tausta" alt="erilaisia" width ="250" height ="300">
+	
 	<body/>
