--- a/second.html
+++ b/second.html
@@ -11,7 +11,7 @@
 		<a href="https://jerojal.github.io/second.html">use this </a>
 		<h1>cssän Css:än uudet taidot</h1>
 		<p> css:ssä on paljon erilaisia toimintoja.</p>
-		<img src="Coco" alt="Tausta" width ="250" height ="300">
+		<img src="Tausta" alt="erilaisia" width ="250" height ="300">
 
 	<body/>
 	  
