--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 		<a href="https://jerojal.github.io/second.html/second.html">use this</a>
 		<h1>Css:än uudet taidots</h1>
 		<p> css on paljon erilaisia toimintoja kirahvi indexi.</p>
-		<img src="Tausta.PNG" alt="erilaisia" width ="250" height ="300">
+		<img src="tausta.png" alt="erilaisia" width ="250" height ="300">
 	
 	<body/>
