--- a/index.html
+++ b/index.html
@@ -3,18 +3,14 @@
 <html lang="en">
 	<head>
 		<title>Harjoittelen lisää</title>
-		<meta charset="UTF-8" />
+		<meta charset="UTF-8"/>
     	<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
 	
 	<body>
-		<a href="#second.html">use this</a>
-		<h1 id="second.html"> Css:än uudet taidot</h1>
-    
+		<a href="https://jerojal.github.io/second.html/second.html">use this</a>
+		<h1>Css:än uudet taidots</h1>
 		<p> css on paljon erilaisia toimintoja kirahvi indexi.</p>
-	  
-    
-		<img class="fit-picture"
-			src="/media/cc0-images/grapefruit-slice-332-332.jpg"
-			alt="Grapefruit slice atop a pile of other slices">
+		<img src="Tausta.png" alt="erilaisia" width ="250" height ="300">
+	
 	<body/>
