--- a/second.html
+++ b/second.html
@@ -12,7 +12,11 @@
 		<h1>cssän Css:än uudet taidot</h1>
 		<p> css:ssä on paljon erilaisia toimintoja.</p>
 		<img src="Tausta.png" alt="erilaisia" width ="250" height ="300">
-
+		<figure>
+			<img src="Kirahvi.jpg" alt= "kirahvi">
+			<figcaption> kuvassa on kirahvi, lähteenä  <a
+			href = "https://www.pikist.com/free-photo-ihqac" pikist</a></figcaption>
+		</figure>
 	<body/>
 	  
     
