--- a/second.html
+++ b/second.html
@@ -8,14 +8,14 @@
 	</head>
 
 	<body>
-		<a href="https://jerojal.github.io/second.html">use this </a>
+		<a href="https://jerojal.github.io/second.html">Tästä pääse takaisin </a>
 		<h1>cssän Css:än uudet taidot</h1>
 		<p> css:ssä on paljon erilaisia toimintoja.</p>
 		<img src="Tausta.png" alt="erilaisia" width ="250" height ="300">
 		<figure>
 			<img src="Kirahvi.jpg" alt= "kirahvi">
 			<figcaption> kuvassa on kirahvi, lähteenä  <a
-			href = "https://www.pikist.com/free-photo-ihqac" pikist</a></figcaption>
+			href = "https://www.pikist.com/free-photo-ihqac"> Pikist </a></figcaption>
 		</figure>
 	<body/>
 	  
