--- a/second.html
+++ b/second.html
@@ -14,8 +14,9 @@
 		<img src="Tausta.png" alt="erilaisia" width ="250" height ="300">
 		<figure>
 			<img src="Kirahvi.jpg" alt= "kirahvi">
-			<figcaption> kuvassa on kirahvi, lähteenä  <a
-			href = "https://www.pikist.com/free-photo-ihqac"> Pikist </a></figcaption>
+			<figcaption> kuvassa on kirahvi, lähteenä  
+			<a href="https://www.pikist.com/free-photo-ihqac"> Pikist </a>
+			</figcaption>
 		</figure>
 	<body/>
 	  
