--- a/second.html
+++ b/second.html
@@ -13,7 +13,7 @@
 		<p> css:ssä on paljon erilaisia toimintoja.</p>
 		<img src="Tausta.png" alt="erilaisia" width ="250" height ="300">
 		<figure>
-			<img src="Kirahvi.jpg" alt= "kirahvi">
+			<img src="/Kirahvi.jpg" alt= "kirahvis">
 			<figcaption> kuvassa on kirahvi, lähteenä  
 			<a href="https://www.pikist.com/free-photo-ihqac"> Pikist </a>
 			</figcaption>
