--- a/second.html
+++ b/second.html
@@ -13,8 +13,8 @@
 		<p> css:ssä on paljon erilaisia toimintoja.</p>
 		<img src="Tausta.png" alt="erilaisia" width ="250" height ="300">
 		<figure>
-			<img src="/Kirahvi.jpg" alt= "kirahvis">
-			<figcaption> kuvassa on kirahvi
+			<img src="Kirahvi.jpg" alt= "kirahvis">
+			<figcaption> kuvassa on kirahvi <a href="https://www.pikist.com/free-photo-ihqac"> pikist </a>
 			</figcaption>
 		</figure>
 	<body/>
