--- a/second.html
+++ b/second.html
@@ -14,7 +14,8 @@
 		<img src="Tausta.png" alt="erilaisia" width ="250" height ="300">
 		<figure>
 			<img src="Kirahvi.jpg" alt= "kirahvis">
-			<figcaption> kuvassa on kirahvi,lähde <a href="https://www.pikist.com/free-photo-ihqac"> pikist </a>
+			<figcaption> kuvassa on kirahvi,lähde <a href="https://www.wikidata.org/wiki/Q15083#/media/File:Giraffa_camelopardalis_angolensis.jpg"> 
+			wikidata </a>
 			</figcaption>
 		</figure>
 	<body/>
