--- a/second.html
+++ b/second.html
@@ -18,6 +18,8 @@
 			wikidata </a>
 			</figcaption>
 		</figure>
+		<label for="file">Ymmärrys verkkosivujen teosta:</label>
+		<progress id="file" max="100" value="10"> 70%</progress>
 	<body/>
 	  
     
