--- a/second.html
+++ b/second.html
@@ -13,7 +13,7 @@
 		<p> css:ssä on paljon erilaisia toimintoja.</p>
 		<img src="Tausta.png" alt="erilaisia" width ="250" height ="300">
 		<figure>
-			<img src="Kirahvi.jpg" alt= "kirahvis">
+			<img src="Kirahvi.jpg" alt= "kirahvis" width = "200" height= "450">
 			<figcaption> kuvassa on kirahvi,lähde <a href="https://www.wikidata.org/wiki/Q15083#/media/File:Giraffa_camelopardalis_angolensis.jpg"> 
 			wikidata </a>
 			</figcaption>
