--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<head>
 		<title>Harjoittelen lisää</title>
 		<meta charset="UTF-8"/>
+		<link rel="stylesheet" type="text/css" href="styles.css">
+
 	</head>
 	
 	<body>
@@ -11,4 +13,4 @@
 		<h1>Css:än uudet taidots</h1>
 		<p> css on paljon erilaisia toimintoja kirahvi indexi.</p>
 	
-	<body/>
+	</body>
