--- a/second.html
+++ b/second.html
@@ -20,6 +20,6 @@
 		</figure>
 		<label for="file">Ymmärrys verkkosivujen teosta:</label>
 		<progress id="file" max="100" value="10"> 70%</progress>
-	<body/>
+	</body>
 	  
     
