--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 
 <html lang="en">
 	<head>
-		<title>Harjoittelen lisää</title>
+		<title>Eläimet maailmalla</title>
 		<meta charset="UTF-8"/>
 		<link rel="stylesheet" type="text/css" href="styles.css">
 
 	</head>
 	
 	<body>
-		<a href="https://jerojal.github.io/second.html/second.html">Reitti sivulle</a>
-		<h1>Css:än uudet taidots</h1>
-		<p> css on paljon erilaisia toimintoja kirahvi indexi.</p>
+		<a href="https://jerojal.github.io/second.html/second.html">Afrikan eläimiä</a>
+		<h1>Tutkitaan eri paikkojen eläimiä</h1>
+		<p> monissa maissa on vain niissä esiintyviä eläimiä.</p>
 	
 	</body>
