--- a/second.html
+++ b/second.html
@@ -2,24 +2,24 @@
 
 <html lang="en">
 	<head>
-		<title>Harjoittelen lisää</title>
+		<title>Maailmassa on monenlaisia eläimiä</title>
 		<meta charset="UTF-8"/>
 		<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
 
 	<body>
 		<a href="https://jerojal.github.io/second.html">Tästä pääse takaisin </a>
-		<h1>cssän Css:än uudet taidot</h1>
-		<p> css:ssä on paljon erilaisia toimintoja.</p>
-		<img src="Tausta.png" alt="erilaisia" width ="250" height ="300">
+		<h1> esimerkiksi Afrikan savanneilla on paljon isokokoisia eläimiä</h1>
+		<p> On vaikkapa sarvikuonoja ja norsuja.</p>
+		<img src="ElephantRhino.jpg" alt="eläimiä" width ="250" height ="300">
 		<figure>
 			<img src="Kirahvi.jpg" alt= "kirahvis" width = "250" height= "450">
-			<figcaption> kuvassa on kirahvi,lähde <a href="https://www.wikidata.org/wiki/Q15083#/media/File:Giraffa_camelopardalis_angolensis.jpg"> 
+			<figcaption> kuvassa on kirahvi, lähde <a href="https://www.wikidata.org/wiki/Q15083#/media/File:Giraffa_camelopardalis_angolensis.jpg"> 
 			wikidata </a>
 			</figcaption>
 		</figure>
-		<label for="file">Ymmärrys verkkosivujen teosta:</label>
-		<progress id="file" max="100" value="10"> 70%</progress>
+		<label for="file"> hyväksyminen uhanalaisten salmetsästykselle:</label>
+		<progress id="file" max="100" value="5"> 70%</progress>
 	</body>
 	  
     
