--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 	<body>
 		<a href="https://jerojal.github.io/second.html/second.html">Afrikan eläimiä</a>
 		<h1>Tutkitaan eri paikkojen eläimiä</h1>
-		<p> monissa maissa on vain niissä esiintyviä eläimiä.</p>
+		<p> monissa maissa on vain niissä esiintyviä eläimiä. Näitä kutsutaan endeemisiksi lajeiksi.</p>
 	
 	</body>
