--- a/second.html
+++ b/second.html
@@ -8,10 +8,12 @@
 	</head>
 
 	<body>
-		<a href="https://jerojal.github.io/second.html">Tästä pääse takaisin </a>
+		<a href="https://jerojal.github.io/second.html">Tästä pääse takaisin alkuun </a>
 		<h1> esimerkiksi Afrikan savanneilla on paljon isokokoisia eläimiä</h1>
 		<p> On vaikkapa sarvikuonoja ja norsuja.</p>
 		<img src="ElephantRhino.jpg" alt="eläimiä" width ="250" height ="300">
+		<h2> on myös monia muita tunnettuja eläimiä, kuten seepra tai vaikkapa kirahvi</h2>
+		<p> Kirahvi on maailman pisin eläin</p>
 		<figure>
 			<img src="Kirahvi.jpg" alt= "kirahvis" width = "250" height= "450">
 			<figcaption> kuvassa on kirahvi, lähde <a href="https://www.wikidata.org/wiki/Q15083#/media/File:Giraffa_camelopardalis_angolensis.jpg"> 
@@ -20,6 +22,7 @@
 		</figure>
 		<label for="file"> hyväksyminen uhanalaisten salmetsästykselle:</label>
 		<progress id="file" max="100" value="5"> 70%</progress>
+		<p> jotta kyseiset eläimet eivät katoa kokonaan seuraavien vuosikymmenten aikana on ihmisillä paljon parannettavaa</p>
 	</body>
 	  
     
