--- a/second.html
+++ b/second.html
@@ -20,9 +20,9 @@
 			wikidata </a>
 			</figcaption>
 		</figure>
-		<label for="file"> hyväksyminen uhanalaisten salmetsästykselle:</label>
-		<progress id="file" max="100" value="5"> 70%</progress>
-		<p> jotta kyseiset eläimet eivät katoa kokonaan seuraavien vuosikymmenten aikana on ihmisillä paljon parannettavaa</p>
+		<label for="file"> hyväksyntä uhanalaisten eläinten salmetsästykselle:</label>
+		<progress id="file" max="100" value="3"> 70%</progress>
+		<p> jotta kyseiset eläimet eivät katoa kokonaan seuraavien vuosikymmenten aikana on ihmisillä paljon parannettavaa tavoissaan</p>
 	</body>
 	  
     
