--- a/second.html
+++ b/second.html
@@ -2,14 +2,15 @@
 
 <html lang="en">
 	<head>
-		<title>Maailmassa on monenlaisia eläimiä</title>
+		<title>Afrikan eläimet</title>
 		<meta charset="UTF-8"/>
 		<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
 
 	<body>
 		<a href="https://jerojal.github.io/second.html">Tästä pääse takaisin alkuun </a>
-		<h1> esimerkiksi Afrikan savanneilla on paljon isokokoisia eläimiä</h1>
+		<h1> Maailmassa on monenlaisia eläimiä </h1>
+		<p> esimerkiksi Afrikan savanneilla on paljon isokokoisia eläimiä</p>
 		<p> On vaikkapa sarvikuonoja ja norsuja.</p>
 		<img src="ElephantRhino.jpg" alt="eläimiä" width ="250" height ="300">
 		<h2> on myös monia muita tunnettuja eläimiä, kuten seepra tai vaikkapa kirahvi</h2>
