--- a/second.html
+++ b/second.html
@@ -10,20 +10,20 @@
 	<body>
 		<a href="https://jerojal.github.io/second.html">Tästä pääse takaisin alkuun </a>
 		<h1> Maailmassa on monenlaisia eläimiä </h1>
-		<p> esimerkiksi Afrikan savanneilla on paljon isokokoisia eläimiä</p>
+		<p> Esimerkiksi Afrikan savanneilla on paljon isokokoisia eläimiä</p>
 		<p> On vaikkapa sarvikuonoja ja norsuja.</p>
 		<img src="ElephantRhino.jpg" alt="eläimiä" width ="250" height ="300">
-		<h2> on myös monia muita tunnettuja eläimiä, kuten seepra tai vaikkapa kirahvi</h2>
+		<h2> On myös monia muita tunnettuja eläimiä, kuten seepra tai vaikkapa kirahvi</h2>
 		<p> Kirahvi on maailman pisin eläin</p>
 		<figure>
 			<img src="Kirahvi.jpg" alt= "kirahvis" width = "250" height= "450">
-			<figcaption> kuvassa on kirahvi, lähde <a href="https://www.wikidata.org/wiki/Q15083#/media/File:Giraffa_camelopardalis_angolensis.jpg"> 
+			<figcaption> Kuvassa on kirahvi, lähde <a href="https://www.wikidata.org/wiki/Q15083#/media/File:Giraffa_camelopardalis_angolensis.jpg"> 
 			wikidata </a>
 			</figcaption>
 		</figure>
-		<label for="file"> hyväksyntä uhanalaisten eläinten salmetsästykselle:</label>
-		<progress id="file" max="100" value="3"> 70%</progress>
-		<p> jotta kyseiset eläimet eivät katoa kokonaan seuraavien vuosikymmenten aikana on ihmisillä paljon parannettavaa tavoissaan</p>
+		<label for="file"> Hyväksyntä uhanalaisten eläinten salmetsästykselle:</label>
+		<progress id="file" max="100" value="5"> 70%</progress>
+		<p> Jotta kyseiset eläimet eivät katoa kokonaan seuraavien vuosikymmenten aikana on ihmisillä paljon parannettavaa tavoissaan</p>
 	</body>
 	  
     
