--- a/second.html
+++ b/second.html
@@ -14,7 +14,7 @@
 		<p> On vaikkapa sarvikuonoja ja norsuja.</p>
 		<img src="ElephantRhino.jpg" alt="eläimiä" width ="400" height ="400">
 		<h2> On myös monia muita tunnettuja eläimiä, kuten seepra tai vaikkapa kirahvi</h2>
-		<p> Kirahvi on maailman pisin eläin</p>
+		<p> Kirahvi on maailman korkein eläin</p>
 		<figure>
 			<img src="Kirahvi.jpg" alt= "kirahvis" width = "360" height= "450">
 			<figcaption> Kuvassa on kirahvi, lähde <a href="https://www.wikidata.org/wiki/Q15083#/media/File:Giraffa_camelopardalis_angolensis.jpg"> 
