--- a/second.html
+++ b/second.html
@@ -21,7 +21,7 @@
 			wikidata </a>
 			</figcaption>
 		</figure>
-		<label for="file"> Hyväksyntä uhanalaisten eläinten salmetsästykselle:</label>
+		<label for="file"> Hyväksyntä uhanalaisten eläinten salametsästykselle:</label>
 		<progress id="file" max="100" value="5"> 70%</progress>
 		<p> Jotta kyseiset eläimet eivät katoa kokonaan seuraavien vuosikymmenten aikana on ihmisillä paljon parannettavaa tavoissaan</p>
 	</body>
